Z-index for absolute positioned elements fixed

--- a/src/blocks/dropdown/customers-dropdown/customers-dropdown.scss
+++ b/src/blocks/dropdown/customers-dropdown/customers-dropdown.scss
@@ -60,7 +60,7 @@
     border: 1px solid $dark-shade-50;
     border-top-width: 0;
     border-radius: 0 0 4px 4px;
-    z-index: 1;
+    z-index: 8;
 
     visibility: hidden;
 }
