--- a/src/blocks/dropdown/filter-date-dropdown/filter-date-dropdown.scss
+++ b/src/blocks/dropdown/filter-date-dropdown/filter-date-dropdown.scss
@@ -42,7 +42,7 @@
 
 .filter-date-dropdown__calendar {
     position: absolute;
-    z-index: 1;
+    z-index: 9;
     left: -1px;
     top: 50px;
 }
